src/objects/CRM_WF_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Actividad__c</fullName>
        <label>Actividad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Iniciativa Comercial</fullName>
                </value>
                <value>
                    <fullName>Campaña</fullName>
                </value>
                <value>
                    <fullName>Nuevo Producto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Buzon_Linea_Bancomer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Buzón Linea Bancomer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Conteo_Variables__c</fullName>
        <label>Conteo Variables</label>
        <summaryForeignKey>CRM_WF_Checklist_Variables__c.CRM_WF_Checklist_Principal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Documento_Circuito_Aclaraciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Circuito</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Entrega_De_Campana__c</fullName>
        <formula>IF(  RecordType.Name = &apos;Checklist Principal&apos;, CRM_WF_Fecha_Inicio__c - CRM_WF_Fecha_Carga_2__c, MX_WF_Fecha_Inicio_Campa_a__c - CRM_WF_Fecha_Carga_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entrega de campaña</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Estatus_Checklist__c</fullName>
        <label>Estatus Checklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Autorización Línea Bancomer - SUN</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Autorizacion Multiasistencia</fullName>
                    <isActive>false</isActive>
                    <label>Autorizacion Multiasistencia</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Carga_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Carga</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Fin__c</fullName>
        <formula>CRM_WF_Nombre_Estrategia_Proyecto__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha Fin Campaña</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Inicio__c</fullName>
        <formula>CRM_WF_Nombre_Estrategia_Proyecto__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha Inicio Campaña</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Publicacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Publicación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Folio_Anterior__c</fullName>
        <description>Campo Exclusivo para cargas masivas de datos.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Folio Anterior</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Liga_Documento_De_Campana__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Documento de Campaña</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Matriz_De_Escalamiento__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Matriz</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Matriz__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>¿El documento de Campaña cuenta con Matriz de Escalamiento?</inlineHelpText>
        <label>Matriz de Escalamiento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Estrategia_Proyecto__c</fullName>
        <label>Nombre Estrategia / Proyecto</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Checklist</relationshipLabel>
        <relationshipName>Checklist</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_de_subcampana__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de subcampaña</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Objetivo__c</fullName>
        <formula>CRM_WF_Nombre_Estrategia_Proyecto__r.CRM_WF_Objetivos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Objetivo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Requiere_Validacion_de_SUN__c</fullName>
        <label>¿Requiere Validación de SUN?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Squad_Producto__c</fullName>
        <formula>TEXT (CRM_WF_Nombre_Estrategia_Proyecto__r.CRM_WF_Area_Solicitante__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Squad / Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_de_Campana__c</fullName>
        <formula>IF ( CRM_WF_Fecha_Fin__c - CRM_WF_Fecha_Inicio__c &gt; 90, &quot;Recurrente&quot;, &quot;No Recurrente&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Campaña</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuito_de_Aclaraciones__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>¿El documento de Campañas cuenta con Circuito de Aclaraciones?</inlineHelpText>
        <label>Circuito de Aclaraciones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_Fin_Campa_a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Fin Sub Campaña</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_Inicio_Campa_a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Inicio Sub Campaña</label>
        <type>Date</type>
    </fields>
    <label>Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist</pluralLabel>
    <recordTypes>
        <fullName>CRM_WF_Checklist</fullName>
        <active>true</active>
        <label>Checklist Principal</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Checklist_Sub_Campa_a</fullName>
        <active>true</active>
        <label>Checklist Sub Campaña</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>